Prevent double borders

--- a/src/components/input-group/input-group.scss
+++ b/src/components/input-group/input-group.scss
@@ -13,6 +13,10 @@
     border-top-left-radius: var(--size-border-radius-input-group);
   }
 
+  & :nth-child(n + 2) {
+    margin-left: -2px;
+  }
+
   /**
  * In the instance where someone would want to include 3 or more elements,
  * this ensures that the middle elements will not have a border radius.
